# auth

./: .pre-commit-config.yaml  pyproject.toml  pytest.ini
docker/: .env.example  Dockerfile  gunicorn.py
requirements/: base.txt
src/api/: urls.py
src/api/settings/configs/: authentication.py  authlib.py  cache.py  general_settings.py  installed_apps.py  oauth2.py  rest_framework.py  simple_jwt.py  social.py  templates.py
src/api/settings/envs/: test.py
src/auth_/: apps.py  router.py
src/auth_/auth/: authentication.py
src/auth_/constants/: auth.py
src/auth_/exceptions/: auth.py
src/auth_/migrations/: 0001_initial.py
src/auth_/models/: auth.py
src/auth_/serializers/: __init__.py  auth.py
src/auth_/services/: auth.py
src/auth_/simplejwt/: tokens.py
src/auth_/tests/models/: test_auth.py
src/auth_/views/: auth.py  internal.py
src/auths/: router.py
src/auths/auth/: authentication.py
src/auths/constants/: __init__.py
src/auths/models/: auth.py
src/auths/serializers/: __init__.py  auth.py
src/auths/services/: auth.py
src/auths/simplejwt/: serializers.py
src/auths/tests/models/: test_auth.py
src/auths/views/: __init__.py  auth.py  internal.py
src/oauth2/: router.py
src/oauth2/services/: client.py  oauth2.py  social.py
src/oauth2/socials/context/: __init__.py  base.py
src/oauth2/socials/strategy/: __init__.py  base.py  deco.py  github.py  google.py
src/oauth2/views/: __init__.py  oauth2.py
src/tests/auth/: __init__.py  test_login.py  test_obtain.py  test_refresh.py  test_signup.py  test_verify.py
src/tests/factories/: auth.py
src/tests/internal/: test_create.py  test_delete.py  test_read.py
